objects/Get_Feedback__c.object
<CustomObject><fields>
<fields>
        <fullName>Service_Case_Closed__c</fullName>
        <label>Service - Case Closed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>예</fullName>
                </value>
                <value>
                    <fullName>아니요</fullName>
                </value>
                <value>
                    <fullName>Ja</fullName>
                </value>
                <value>
                    <fullName>Nee</fullName>
                </value>
                <value>
                    <fullName>Nein</fullName>
                </value>
                <value>
                    <fullName>可以</fullName>
                </value>
                <value>
                    <fullName>不可以</fullName>
                </value>
                <value>
                    <fullName>Oui</fullName>
                </value>
                <value>
                    <fullName>Non</fullName>
                </value>
                <value>
                    <fullName>はい</fullName>
                </value>
                <value>
                    <fullName>いいえ</fullName>
                </value>
                <value>
                    <fullName>Sí</fullName>
                </value>
                <value>
                    <fullName>Si</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Service_Case_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service - Case Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Get_Feedback1</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Service_Courtesy_of_rep__c</fullName>
        <label>Service - Courtesy of rep</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Service_Effectiveness_solution_rating__c</fullName>
        <label>Service - Effectiveness solution rating</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Service_Initial_Response_Rating__c</fullName>
        <label>Service - Initial Response Rating</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Service_Overall_Satisfaction_rating__c</fullName>
        <label>Service - Overall Satisfaction rating</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Service_Owner_Manager_email__c</fullName>
        <label>Service - Owner Manager email</label>
        <type>Email</type>
    </fields><fields>
        <fullName>Service_Primary_Sales_Rep_email__c</fullName>
        <description>to capture the Primary Sales Rep's email address for the Account on the associated case.  the address will be used to send an email to the rep on the creation of a Service Survey</description>
        <label>Service - Primary Sales Rep email</label>
        <type>Email</type>
    </fields><fields>
        <fullName>Service_Reason_for_overall_sat__c</fullName>
        <label>Service - Reason for Overall Sat</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Service_Technical_knowledge_of_rep__c</fullName>
        <label>Service - Technical knowledge of rep</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Service_Template_Survey_Response__c</fullName>
        <description>Used for Status Survey in emails to managers, sales, and Case Owners</description>
        <formula>IF (CONTAINS((TEXT(Service_Case_Closed__c )), "No"), "Still Open",
IF (CONTAINS((TEXT(Service_Case_Closed__c )), "아니요"), "Still Open",
IF (CONTAINS((TEXT(Service_Case_Closed__c )), "Nee"), "Still Open",
IF (CONTAINS((TEXT(Service_Case_Closed__c )), "Nein"), "Still Open",
IF (CONTAINS((TEXT(Service_Case_Closed__c )), "Non"), "Still Open",
IF (CONTAINS((TEXT(Service_Case_Closed__c )), "不可以"), "Still Open",
IF (CONTAINS((TEXT(Service_Case_Closed__c )), "いいえ"), "Still Open",
IF (Service_Overall_Satisfaction_rating__c=5, "Excellent", 
IF (Service_Overall_Satisfaction_rating__c&lt;3, "Dissatisfied", 
IF (Service_Overall_Satisfaction_rating__c=5, "Excellent", 
IF (Service_Overall_Satisfaction_rating__c=3, "OK", 
IF (Service_Overall_Satisfaction_rating__c=4, "OK",
  ""))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service - Template Survey Response</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Service_Time_to_solution_rating__c</fullName>
        <label>Service - Time to solution rating</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Service_Timely_updates_rating__c</fullName>
        <label>Service - Timely updates rating</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Service_why_still_open__c</fullName>
        <label>Service - why still open</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Status_Update_Status_of_project__c</fullName>
        <description>Status Update Survey field</description>
        <label>Status Update - Status of project</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Published</fullName>
                </value>
                <value>
                    <fullName>In Development</fullName>
                </value>
                <value>
                    <fullName>Cancelled/No longer pursuing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Status_Update_Survey_Additional_Commen__c</fullName>
        <description>Status Update Survey field</description>
        <label>Status Update Survey - Additional Commen</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Status_Update_Survey_Company_name__c</fullName>
        <description>Status Update Survey field</description>
        <label>Status Update Survey - Company name</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Status_Update_Survey_Do_you_have_a_pub__c</fullName>
        <description>Status Update Survey field</description>
        <label>Status Update Survey - Do you have a pub</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Status_Update_Survey_Editorial_contact__c</fullName>
        <description>Status Update Survey field</description>
        <label>Status Update Survey - Editorial contact</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Status_Update_Survey_Editorial_email__c</fullName>
        <description>Status Update Survey field</description>
        <label>Status Update Survey - Editorial email</label>
        <type>Email</type>
    </fields><fields>
        <fullName>Status_Update_Survey_expected_pub_date__c</fullName>
        <description>Status Update Survey field</description>
        <label>Status Update Survey - expected pub date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Status_Update_Survey_when_a_publisher__c</fullName>
        <description>Status Update Survey field</description>
        <label>Status Update Survey - when a publisher?</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Status_of_product_development__c</fullName>
        <description>Pre-Product Survey</description>
        <label>Status of product development</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Still in Development</fullName>
                </value>
                <value>
                    <fullName>Complete and Shipping</fullName>
                </value>
                <value>
                    <fullName>Project on Hold or Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Subjects_listed_witho_n_website__c</fullName>
        <description>Book Promo Survey Results</description>
        <label>Subjects listed witho n website</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bioscience and Biomedical</fullName>
                </value>
                <value>
                    <fullName>Chemistry and Chemical Engineering</fullName>
                </value>
                <value>
                    <fullName>Communications Systems</fullName>
                </value>
                <value>
                    <fullName>Control Systems</fullName>
                </value>
                <value>
                    <fullName>Digital Signal Processing</fullName>
                </value>
                <value>
                    <fullName>Earth Sciences</fullName>
                </value>
                <value>
                    <fullName>Economics and Computational Finance</fullName>
                </value>
                <value>
                    <fullName>Electronics</fullName>
                </value>
                <value>
                    <fullName>General Interest</fullName>
                </value>
                <value>
                    <fullName>Image and Video Processing</fullName>
                </value>
                <value>
                    <fullName>Mathematics</fullName>
                </value>
                <value>
                    <fullName>Mechanical Engineering</fullName>
                </value>
                <value>
                    <fullName>Neural Networks and Fuzzy Logic</fullName>
                </value>
                <value>
                    <fullName>Physics</fullName>
                </value>
                <value>
                    <fullName>Programming and Computer Science</fullName>
                </value>
                <value>
                    <fullName>Statistics and Probability</fullName>
                </value>
                <value>
                    <fullName>System Identification</fullName>
                </value>
                <value>
                    <fullName>System Modeling and Simulation</fullName>
                </value>
                <value>
                    <fullName>Test and Measurement</fullName>
                </value>
                <value>
                    <fullName>Using MATLAB and Simulink</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Survey_Completed__c</fullName>
        <description>indicated the date and time teh survey was completed</description>
        <label>Survey Completed</label>
        <type>DateTime</type>
    </fields><fields>
        <fullName>Survey_Link__c</fullName>
        <description>to display the Get Feedback Survey link</description>
        <label>Survey Link</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Survey_completed_by__c</fullName>
        <description>email of who completed the survey</description>
        <label>Survey completed by</label>
        <length>75</length>
        <type>Text</type>
    </fields><fields>
        <fullName>T_C_Name__c</fullName>
        <description>Name provided in survey</description>
        <inlineHelpText>Name provided in survey</inlineHelpText>
        <label>T&amp;C Name</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>T_C_Reason_for_not_accepting_terms__c</fullName>
        <description>Why the customer did not accept the T&amp;C from the survey</description>
        <inlineHelpText>Why the customer did not accept the T&amp;C from the survey</inlineHelpText>
        <label>T&amp;C - Reason for not accepting terms</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>T_C_accept_membership_term__c</fullName>
        <description>Indicates if the customer accepts the T&amp;C from the Survey</description>
        <inlineHelpText>Indicates if the customer accepts the T&amp;C from the Survey</inlineHelpText>
        <label>T&amp;C - accept membership term</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>T_C_email__c</fullName>
        <description>email provided in the survey</description>
        <inlineHelpText>email provided in the survey</inlineHelpText>
        <label>T&amp;C email</label>
        <type>Email</type>
    </fields><fields>
        <fullName>Terms_and_conditions_accepted__c</fullName>
        <description>Partners and Connections- indicates if teh terms and conditions were accepted for</description>
        <label>Terms and conditions accepted</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>URL_or_location_to_the_supplemental_MATL__c</fullName>
        <description>Book Promo Survey Results</description>
        <label>URL or location to the supplemental MATL</label>
        <length>250</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Was_an_application_submitted__c</fullName>
        <description>Author license</description>
        <label>Was an application submitted</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>What_is_the_expected_publication_date__c</fullName>
        <description>Book Promo Survey Results</description>
        <label>What is the expected publication date?</label>
        <type>Date</type>
    </fields><fields>
        <fullName>What_makes_this_book_different_from_othe__c</fullName>
        <description>Book Promo Survey Results</description>
        <label>What makes this book different from othe</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Get Feedback</relationshipLabel>
        <relationshipName>Get_Feedback</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>developemnt_to_be_complete_month__c</fullName>
        <description>Pre-Product Survey</description>
        <label>Developemnt to be complete - month</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>needs_and_intended_use_for_license__c</fullName>
        <description>Author License</description>
        <label>needs and intended use for license.</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><allowInChatterGroups>true</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><description>used to capture survey results from Get Feedback</description><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableChangeDataCapture>false</enableChangeDataCapture><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>Private</externalSharingModel><label>Get Feedback</label><nameField>
        <label>Get Feedback Name</label>
        <type>Text</type>
    </nameField><pluralLabel>Get Feedback</pluralLabel><recordTypeTrackHistory>false</recordTypeTrackHistory><sharingModel>ReadWrite</sharingModel><visibility>Public</visibility><listViews>
        <fullName>Author_Surveys</fullName>
        <columns>NAME</columns>
        <columns>License_Survey_Received__c</columns>
        <columns>License_Survey_Status__c</columns>
        <columns>Author_s_License__c</columns>
        <columns>Contact__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Send_Author_License_Renewal_Survey__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>License_Survey_Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Get_Feedback__c.Book_Program</value>
        </filters>
        <label>Author Surveys</label>
        <language>en_US</language>
    </listViews><listViews>
        <fullName>EBR</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>case__c</columns>
        <columns>Prerelease_Survey_Date_Survey_Received__c</columns>
        <columns>Prerelease_comment_on_experience__c</columns>
        <columns>Prerelease_crash_issues__c</columns>
        <columns>Prerelease_Ease_of_Transition__c</columns>
        <columns>Prerelesae_Incompatibility_comment__c</columns>
        <columns>Prerelesae_incompatibility_encountered__c</columns>
        <columns>Prerelease_Overall_Experience__c</columns>
        <columns>Prerelease_Performance__c</columns>
        <columns>Prerelease_Stability__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Bug</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>12/25/2016 12:00 AM</value>
        </filters>
        <label>EBR</label>
        <language>en_US</language>
    </listViews><recordTypes>
        <fullName>Book_Program</fullName>
        <active>true</active>
        <description>to capture Book Program Surveys</description>
        <label>Book Program</label>
    </recordTypes><recordTypes>
        <fullName>Connections</fullName>
        <active>true</active>
        <description>for all Connection Surveys</description>
        <label>Connections</label>
    </recordTypes><recordTypes>
        <fullName>EBR</fullName>
        <active>true</active>
        <description>to capture EBR feedback</description>
        <label>EBR</label>
    </recordTypes><recordTypes>
        <fullName>Hardware_Package</fullName>
        <active>true</active>
        <label>Hardware Package</label>
    </recordTypes><recordTypes>
        <fullName>Prerelease_Survey</fullName>
        <active>true</active>
        <description>for Prerelease survey info</description>
        <label>Prerelease Survey</label>
    </recordTypes><recordTypes>
        <fullName>get_feedback</fullName>
        <active>true</active>
        <label>Get Feedback</label>
    </recordTypes><recordTypes>
        <fullName>service</fullName>
        <active>true</active>
        <label>Service</label>
    </recordTypes></CustomObject>